--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countdown</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Countdown</title>
 
-    <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>countdown timer project</h1>
-    <!-- javascript -->
-    <script src="app.js"></script>
-  </body>
+		<!-- styles -->
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<section class="section-center">
+			<!-- image -->
+			<article class="gift-img">
+				<img src="./gift.jpeg" alt="gift picture" />
+			</article>
+			<!-- info -->
+			<article class="gift-info">
+				<h3>old iphone giveaway</h3>
+				<h4 class="giveaway">giveaway ends on Saturday, 25 December, 8:00am</h4>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+					voluptates, quae reiciendis illo consequatur delectus magni ab
+					voluptas commodi exercitationem aliquam quas repellat saepe et
+					deserunt omnis eveniet dolores aspernatur.
+				</p>
+				<div class="deadline">
+					<!-- days -->
+					<div class="deadline-format">
+						<div>
+							<h4 class="days">34</h4>
+							<span>days</span>
+						</div>
+					</div>
+					<!-- end of item -->
+					<!-- hours -->
+					<div class="deadline-format">
+						<div>
+							<h4 class="hours">22</h4>
+							<span>hours</span>
+						</div>
+					</div>
+					<!-- end of item -->
+					<!-- mins -->
+					<div class="deadline-format">
+						<div>
+							<h4 class="mins">34</h4>
+							<span>mins</span>
+						</div>
+					</div>
+					<!-- end of item -->
+					<!-- secs -->
+					<div class="deadline-format">
+						<div>
+							<h4 class="secs">34</h4>
+							<span>secs</span>
+						</div>
+					</div>
+					<!-- end of item -->
+				</div>
+			</article>
+		</section>
+
+		<!-- javascript -->
+		<script src="app.js"></script>
+	</body>
 </html>
